--- a/style.css
+++ b/style.css
@@ -91,3 +91,37 @@ body {
     flex-wrap: wrap;
   }
 }
+
+.sidebar {
+  height: 100vh;
+  width: 20vh;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.66);
+  right: 0px;
+}
+
+.lap__details {
+  margin-top: 30px;
+  /* line-height: 70px; */
+  /* font-size: 1.5em; */
+  display: grid;
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-template-areas: "i t t t";
+  grid-row-gap: 10px;
+  align-items: center;
+}
+li {
+  list-style: none;
+  background-color: black;
+}
+
+.lap__icon {
+  grid-area: i;
+}
+.lap__time {
+  color: #fff;
+  text-shadow: #333;
+
+  /* grid-column: 2/-1; */
+  grid-area: t;
+}
