--- a/style.css
+++ b/style.css
@@ -92,36 +92,69 @@ body {
   }
 }
 
-.sidebar {
-  height: 100vh;
-  width: 20vh;
+.sidebar-container {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 250px;
+  height: 100%;
+  background-color: #fff;
+  z-index: 999;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  transition: left 0.3s ease-in-out;
+}
+
+.sidebar-container.show-sidebar {
+  left: 0;
+}
+
+.toggle-icon {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.66);
-  right: 0px;
-}
-
-.lap__details {
-  margin-top: 30px;
-  /* line-height: 70px; */
-  /* font-size: 1.5em; */
-  display: grid;
-  /* grid-template-columns: repeat(3, 1fr); */
-  grid-template-areas: "i t t t";
-  grid-row-gap: 10px;
-  align-items: center;
-}
-li {
-  list-style: none;
-  background-color: black;
-}
-
-.lap__icon {
-  grid-area: i;
-}
-.lap__time {
+  top: 10px;
+  right: -40px;
+  width: 30px;
+  height: 30px;
+  background-color: #333;
   color: #fff;
-  text-shadow: #333;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 1;
+}
 
-  /* grid-column: 2/-1; */
-  grid-area: t;
+.sidebar {
+  height: 100%;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.laps-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.lap__item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+.lap__number {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.lap__time {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.toggle-icon img {
+  height: 15px;
 }
