--- a/style.css
+++ b/style.css
@@ -158,3 +158,34 @@ body {
 .toggle-icon img {
   height: 15px;
 }
+
+.quotes-container {
+  height: 20vh;
+  width: 60vw;
+  position: absolute;
+  display: inline-block;
+  top: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  /* border-radius: 30px; */
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  text-shadow: 1px 1px 2px black;
+}
+
+.quote-text {
+  font-size: 2vw;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.quote-author {
+  font-size: 1.5vw;
+  font-style: italic;
+  text-align: center;
+}
